@@ -75,7 +75,13 @@ class RepoFetcher(object):
     This should not be used directly, it's essential a object to encapsulate
     the logic in InterRepository.fetch().
     """
-    def __init__(self, to_repository, from_repository, last_revision=None, pb=None):
+
+    def __init__(self, to_repository, from_repository, last_revision=None, pb=None,
+        find_ghosts=True):
+        """Create a repo fetcher.
+
+        :param find_ghosts: If True search the entire history for ghosts.
+        """
         # result variables.
         self.failed_revisions = []
         self.count_copied = 0
@@ -88,6 +94,7 @@ class RepoFetcher(object):
         self.from_repository = from_repository
         # must not mutate self._last_revision as its potentially a shared instance
         self._last_revision = last_revision
+        self.find_ghosts = find_ghosts
         if pb is None:
             self.pb = bzrlib.ui.ui_factory.nested_progress_bar()
             self.nested_pb = self.pb
@@ -196,7 +203,7 @@ class RepoFetcher(object):
             # XXX: this gets the full graph on both sides, and will make sure
             # that ghosts are filled whether or not you care about them.
             return self.to_repository.missing_revision_ids(self.from_repository,
-                                                           self._last_revision)
+                self._last_revision, find_ghosts=self.find_ghosts)
         except errors.NoSuchRevision:
             raise InstallFailed([self._last_revision])
 
@@ -372,10 +379,10 @@ class Model1toKnit2Fetcher(GenericRepoFetcher):
     """Fetch from a Model1 repository into a Knit2 repository
     """
     def __init__(self, to_repository, from_repository, last_revision=None,
-                 pb=None):
+                 pb=None, find_ghosts=True):
         self.helper = Inter1and2Helper(from_repository, to_repository)
         GenericRepoFetcher.__init__(self, to_repository, from_repository,
-                                    last_revision, pb)
+            last_revision, pb, find_ghosts)
 
     def _generate_root_texts(self, revs):
         self.helper.generate_root_texts(revs)
@@ -388,10 +395,10 @@ class Knit1to2Fetcher(KnitRepoFetcher):
     """Fetch from a Knit1 repository into a Knit2 repository"""
 
     def __init__(self, to_repository, from_repository, last_revision=None, 
-                 pb=None):
+                 pb=None, find_ghosts=True):
         self.helper = Inter1and2Helper(from_repository, to_repository)
         KnitRepoFetcher.__init__(self, to_repository, from_repository,
-                                 last_revision, pb)
+            last_revision, pb, find_ghosts)
 
     def _generate_root_texts(self, revs):
         self.helper.generate_root_texts(revs)
